--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,6 @@
     z-index: 9999;
 }
 
-
 .twentytwenty-horizontal .twentytwenty-handle:before, .twentytwenty-horizontal .twentytwenty-handle:after, .twentytwenty-vertical .twentytwenty-handle:before, .twentytwenty-vertical .twentytwenty-handle:after {
   content: " ";
   display: block;
@@ -584,7 +583,7 @@ li:before{content:'';display:inline-block;width:12px;height:1px;background:#c7ac
 /*! 
 <!-- style animated logo (signature) -->
 */
-.LOGO_ANIMATION {position: absolute;top: 25%;left: 1.5%;width: 24%;}
+.LOGO_ANIMATION {position: absolute;top: 25%;left: 1.5%;width: 24%;display: none;}
 .st0 {stroke: none; fill: rgba(255,255,2555,0); stroke-dasharray: 500;opacity: 10; animation: animate 3s cubic-bezier(0,0.23,1,.1);animation-delay: 0s;}
 .st1 {stroke: none; fill: rgba(255,255,2555,0); stroke-dasharray: 500;opacity: 10; animation: animate 3s cubic-bezier(0,0.23,1,.1);animation-delay: 0.5s;animation-fill-mode: forwards;}
 .st2 {stroke: none; fill: rgba(255,255,2555,0); stroke-dasharray: 500;opacity: 10; animation: animate 3s cubic-bezier(0,0.23,1,.1);animation-delay: 1s;animation-fill-mode: forwards;}
